# dcp

./: README.md  basic.bash  dcp.cabal
samples/: basic.txt  full.txt
src/: Main.hs  Parser.hs  PoC.hs
