cabal-version:       2.4

name:                dcp
version:             0.1.0.0
synopsis:            DocComment Parsing
description:         PoC for DocComment Parsing with MegaParsec
-- bug-reports:
license:             MIT
author:              Compl Yue
maintainer:          compl.yue@icloud.com
-- copyright:
-- category:
build-type:          Simple

executable dcp
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Parser
  build-depends:       
    , base >=4.13 && <4.14
    , mtl -any
    , text -any
    , megaparsec >7.0
  default-language:    Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns
